--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
+    "react-responsive": "^10.0.0",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
     "react-use-gesture": "^9.1.3",
