--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@sendgrid/mail": "^8.1.3",
     "@splinetool/react-spline": "^2.2.6",
     "@vercel/analytics": "^1.1.1",
     "@vercel/postgres": "^0.5.1",
