--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.16.12",
     "locomotive-scroll": "^4.1.4",
     "next": "14.0.3",
+    "next-auth": "^4.24.7",
     "pg": "^8.11.3",
     "pg-browser": "^1.0.6",
     "react": "^18.2.0",
