--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "locomotive-scroll": "^4.1.4",
     "next": "14.0.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "pg": "^8.11.3",
     "pg-browser": "^1.0.6",
     "react": "^18.2.0",
