--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "compass-mixins": "^0.12.12",
     "framer-motion": "^10.16.12",
     "locomotive-scroll": "^4.1.4",
-    "next": "14.0.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "pg": "^8.11.3",
