--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@sendgrid/mail": "^8.1.3",
