Photo carousal remade with Shadcn carousal

--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@radix-ui/react-slot": "^1.1.1",
     "@sendgrid/mail": "^8.1.3",
     "@splinetool/react-spline": "^2.2.6",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/postgres": "^0.5.1",
+    "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.0.0",
     "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "compass-mixins": "^0.12.12",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^10.16.12",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.469.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -40,6 +46,8 @@
     "react-use-gesture": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.8.4",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0"
   },
   "devDependencies": {
