--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-ga": "^3.3.1",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.5.3",
     "react-loading-skeleton": "^3.3.1",
     "react-responsive": "^10.0.0",
