--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "swiper": "^6.8.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.159.0"
+    "three": "^0.159.0",
+    "ua-parser-js": "^2.0.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
